# UiPathSamples

./: .gitignore  ChatGPT_JIRA_Outlook_Integration.uip  ChatGPT_JIRA_Outlook_Integration_Part2.uip  GetterSetter.Activities.1.9.0.nupkg
01-SwapColumnsValueInDatatable/: Main.xaml
02 - NestedLinq/: LookupData.xlsx  Main.xaml  SampleData.xlsx  project.json  ~Main.xaml
03 - MergeDatatableUsingLinq/: Main.xaml  project.json
04 - JoinTwoDatatables/: Main.xaml  project.json
05 - GetDistinctandRemoveDuplicateFromDatatable/: Main.xaml  project.json
06 - SubtractDatatableUsingLinq/: Main.xaml  project.json
07- SortDatatableUsingLinq/: Main.xaml  SampleData.xlsx  project.json
08 - GroupByUsingLinq/: Main.xaml  SampleData.xlsx  project.json
09 - Date Filter Using Linq/: Main.xaml  SampleData.xlsx  project.json
10- Find nth Record Using Linq/: Employee_data.xlsx  Main.xaml  project.json
11 - Find All Uppercase in a string/: Main.xaml  project.json
12 - Calculate Average size of file in a folder/: Main.xaml  project.json
13 - ReadXMLUsingLinq/: Main.xaml  project.json
14 - Get Multiple Elements from XML using LINQ/: Main.xaml  project.json
16 - Find an element within another element/: Main.xaml  (+1 more)
Agent - DeepComplianceAgent/: .env  Supplier.docx  agent.mermaid  main.py  main2.py  output.txt  pyproject.toml  requirements.txt  uipath.json
Agent - DeepComplianceAgent/MLData/: synthetic_timeseries.csv  synthetic_transactions.csv
Agent - MCP-Function-Agent/: .env  AGENTS.md  agent.mermaid  input.json  langgraph.json  main.py  pyproject.toml  uipath.json
(+221 files in other folders)
