[project]
name = "DeepComplianceAgent_1"
version = "0.0.4"
description = "DeepComplianceAgent_1"
authors = [{ name = "Manoj Batra", email = "manojbatra071@gmail.com" }]
dependencies = [
    "uipath-langchain>=0.0.106",
    "langchain-anthropic>=0.3.8",
    "python-docx",
    "langchain-mcp-adapters",
    "mcp",
    "langgraph",
    "pydantic",
    "python-dotenv",
    "httpx"
]
requires-python = ">=3.10"
