[project]
name = "mcp-coder-agent"
version = "0.0.1"
description = "A coder agent that implements and tests Python functions using a dynamic MCP server"
authors = [{ name = "Manoj Batra", email = "manoj.batra@uipath.com" }]
dependencies = [
    "uipath-langchain>=0.0.118",
    "langgraph>=0.5.4",
    "langchain-mcp-adapters>=0.1.9"
]
requires-python = ">=3.11"